kubernetes-manifests/envs/prd/auth-patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kio-api
spec:
  template:
    spec:
      containers:
        - name: kio-api
