kubernetes-manifests/envs/prd/auth-patch-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kio-ui
spec:
  template:
    spec:
      containers:
        - name: kio-ui
